Adding sidebar menu for cateogories

--- a/KapyApp/Views/Shared/_Layout.cshtml
+++ b/KapyApp/Views/Shared/_Layout.cshtml
@@ -7,9 +7,6 @@
     <title>@ViewBag.Title - Kapy News</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
-
-
-
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
@@ -29,45 +26,44 @@
                     <li>@Html.ActionLink("News", "Index", "News1")</li>
                     @*<li>@Html.ActionLink("About", "About", "Home")</li> --> *@
                     @* <li>@Html.ActionLink("Contact", "Contact", "Home")</li> *@
-                    
-                   @* <li>@Html.ActionLink("Categories", "Categories", "News")</li> *@
-                    <li class="dropdown">
-                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                            Categories
-                            <span class="caret"></span>
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a href="Categories/Top News">Top News</a></li>
-                            <li><a href="Categories/Sport">Sport</a></li>
-                            <li><a href="Categories/Politics">Politics</a></li>
-                            <li><a href="Categories/World">World</a></li>
-                        </ul>
-                    </li>
+
+                    @* <li>@Html.ActionLink("Categories", "Categories", "News")</li> *@
+                    @* <li class="dropdown">
+                <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                    Categories
+                    <span class="caret"></span>
+                </a>
+                    *@
+
                     <li>@Html.ActionLink("Search", "Search", "News")</li>  <!-- a button for searching news - the search method will be implemented in the News controller -->
 
-                    </ul>
+
+                    @*@Html.Action("CategoryDropList", "Partial")*@
+
+                </ul>
                     @Html.Partial("_LoginPartial")
-
-                </div>
-
-
-
             </div>
         </div>
+    </div>
+    <div class="navbar navbar-inverse navbar-fixed-left">
+        <a class="navbar-brand" href="#">Categories</a>
+        @Html.Action("_MenuView", "Partial")
 
-
-
-
-        <div class="container body-content">
-            @RenderBody()
-            <hr />
-            <footer>
-                <p>&copy; @DateTime.Now.Year - Kapy News. Kapy News is not responsible for the content of external sites.</p>
-            </footer>
+        <div class="container">
+            <div class="row">
+                @RenderBody()
+                <hr />
+                <footer>
+                    <p>&copy; @DateTime.Now.Year - Kapy News. Kapy News is not responsible for the content of external sites.</p>
+                </footer>
+            </div>
         </div>
+    </div>
 
         @Scripts.Render("~/bundles/jquery")
         @Scripts.Render("~/bundles/bootstrap")
         @RenderSection("scripts", required: false)
     </body>
     </html>
+
+
