--- a/KapyApp/Views/News1/Category.cshtml
+++ b/KapyApp/Views/News1/Category.cshtml
@@ -5,5 +5,40 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Category: @Model.categoryName</h2>
+<h2>@Model.categoryName</h2>
 
+<table class="table">
+
+
+    @foreach (var news in Model.News1)
+    {
+        <tr>
+            <td>
+                @if (news.picUrl == "")
+                {
+                    <img src="~/Content/Images/kapy_logo.png" style="width:200px;height:128px;">
+                }
+                else {
+                    <img src="@Html.DisplayFor(modelItem => news.picUrl) " style="width:200px;height:128px;">
+                }
+            </td>
+            <td>
+                @Html.ActionLink(news.newsTitle, "Details", new { id = news.newsId })
+
+            </td>
+            <td>
+                @*@Html.DisplayFor(modelItem => news.newsDate)*@
+                @Html.DisplayFor(modelItem => news.newsTime)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => news.Source.sourceName)
+            </td>
+            <td>
+                @*@Html.ActionLink("Details", "Details", new { id = item.newsId }) |
+    @Html.ActionLink("Edit", "Edit", new { id=item.newsId }) |*@
+    @Html.ActionLink("Delete", "Delete", new { id = news.newsId })
+            </td>
+        </tr>
+    }
+
+</table>
