--- a/KapyApp/Views/Shared/_Layout.cshtml
+++ b/KapyApp/Views/Shared/_Layout.cshtml
@@ -29,41 +29,57 @@
 
                     @* <li>@Html.ActionLink("Categories", "Categories", "News")</li> *@
                     @* <li class="dropdown">
-                <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                    Categories
-                    <span class="caret"></span>
-                </a>
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                            Categories
+                            <span class="caret"></span>
+                        </a>
                     *@
 
                     <li>@Html.ActionLink("Search", "Search", "News")</li>  <!-- a button for searching news - the search method will be implemented in the News controller -->
-
-
                     @*@Html.Action("CategoryDropList", "Partial")*@
 
                 </ul>
-                    @Html.Partial("_LoginPartial")
+                @Html.Partial("_LoginPartial")
             </div>
         </div>
     </div>
-    <div class="navbar navbar-inverse navbar-fixed-left">
-        <a class="navbar-brand" href="#">Categories</a>
-        @Html.Action("_MenuView", "Partial")
+     
+                <div class="row row-offcanvas row-offcanvas-left">
 
-        <div class="container">
-            <div class="row">
-                @RenderBody()
-                <hr />
-                <footer>
-                    <p>&copy; @DateTime.Now.Year - Kapy News. Kapy News is not responsible for the content of external sites.</p>
-                </footer>
-            </div>
-        </div>
-    </div>
+                    <div class="col-sm-3 col-md-2 sidebar-offcanvas" id="sidebar" role="navigation">
 
-        @Scripts.Render("~/bundles/jquery")
-        @Scripts.Render("~/bundles/bootstrap")
-        @RenderSection("scripts", required: false)
-    </body>
+                        @Html.Action("_MenuView", "News1")
+                    </div>
+                    <div class="container">
+                        <div class="col-sm-9 col-md-10 main">
+                            @RenderBody()
+                        </div>
+
+
+                    </div>
+                    <footer>
+                        <p>&copy; @DateTime.Now.Year - Kapy News. Kapy News is not responsible for the content of external sites.</p>
+                    </footer>
+                </div>
+                        @*<div class="navbar navbar-inverse navbar-fixed-left">
+                            <a class="navbar-brand" href="#">Categories</a>
+                            @Html.Action("_MenuView", "News1")
+                        </div>
+                        <div class="row">
+                            @RenderBody()
+                            <hr />
+                            <footer>
+                                <p>&copy; @DateTime.Now.Year - Kapy News. Kapy News is not responsible for the content of external sites.</p>
+                            </footer>
+                        </div>
+                    </div>*@
+
+
+
+            @Scripts.Render("~/bundles/jquery")
+            @Scripts.Render("~/bundles/bootstrap")
+            @RenderSection("scripts", required: false)
+</body>
     </html>
 
 
